--- a/_editions/4-isca-19.html
+++ b/_editions/4-isca-19.html
@@ -17,6 +17,6 @@ is_accepting_submission: True
 <blockquote class="z-depth-1">
     <p style="padding: 1rem; text-align: left;">
         <strong>Update:</strong>
-        The submision deadline for EMC2 at ISCA'19 has been extended to <strong>June 3rd, 2019 at 23:59 PST</strong>.
+        The submission deadline for EMC2 at ISCA'19 has been extended to <strong>June 3rd, 2019 at 23:59 PST</strong>.
     </p>
 </blockquote>
