Cleanup path for editions page header image. Fixed typo.

--- a/_editions/1-asplos-18.html
+++ b/_editions/1-asplos-18.html
@@ -8,7 +8,7 @@ event_date: 2018-03-25
 event_location: Williamsburg, VA
 event_room: Allegheny Room A
 event_session: afternoon
-header_image: assets/images/editions/asplos-18.jpg
-is_upcomming: False
+header_image: asplos-18.jpg
+is_upcoming: False
 is_accepting_submission: False
 ---
