--- a/_editions/2-hpca-19.html
+++ b/_editions/2-hpca-19.html
@@ -8,7 +8,7 @@ event_date: 2019-02-17
 event_location: Washington D.C.
 event_room: Dogwood Room
 event_session: full
-header_image: assets/images/editions/hpca-19.jpg
-is_upcomming: False
+header_image: hpca-19.jpg
+is_upcoming: False
 is_accepting_submission: False
 ---
