--- a/_editions/3-cvpr-19.html
+++ b/_editions/3-cvpr-19.html
@@ -8,8 +8,8 @@ event_date: 2019-06-16
 event_location: Long Beach, CA
 event_room: Hyatt Shoreline A
 event_session: morning
-header_image: assets/images/editions/cvpr-19.jpg
-is_upcomming: True
+header_image: cvpr-19.jpg
+is_upcoming: True
 is_accepting_submission: False
 ---
 <blockquote class="z-depth-1">
