--- a/_editions/4-isca-19.html
+++ b/_editions/4-isca-19.html
@@ -8,8 +8,8 @@ event_date: 2019-06-23
 event_location: Phoenix, AZ
 event_room: 102B
 event_session: full
-header_image: assets/images/editions/isca-19.jpg
-is_upcomming: True
+header_image: isca-19.jpg
+is_upcoming: True
 is_accepting_submission: True
 ---
 <blockquote class="z-depth-1">
