Submission page can now show more than one paper.

--- a/_editions/4-isca-19.html
+++ b/_editions/4-isca-19.html
@@ -10,6 +10,11 @@ event_room: 102B
 event_session: full
 is_upcoming: True
 is_accepting_submission: True
+submission_url: https://easychair.org/conferences/?conf=emc21
+submission_deadline: 2019-05-27
+submission_deadline_extended: 2019-06-03
+submission_acceptance: 2019-06-10
+submission_camera_ready: 2019-06-17
 ---
 <blockquote class="z-depth-1">
     <p style="padding: 1rem; text-align: left;">
