--- a/submission.html
+++ b/submission.html
@@ -3,6 +3,8 @@ layout: default
 permalink: /submission
 show_note: True
 ---
+{% assign upcoming_editions = site.editions|where: "is_accepting_submission",true|sort:"event_date" %}
+
 <h3 class="header">Submit to the Workshop</h3>
 
 {% if page.show_note %}
@@ -18,34 +20,57 @@ show_note: True
 </div>
 {% endif %}
 
+
 <div class="row">
     <div class="col s12">
         <h4 class="header">Important Dates</h4>
         <table>
+            <thead>
+                <tr>
+                    <th></th>
+                    {% for ed in upcoming_editions %}
+                    <th>{{ ed.colocated_short }}</th>
+                    {% endfor %}
+                </tr>
+            </thead>
             <tbody>
                 <tr>
                     <td>Paper Submission</td>
+                    {% for ed in upcoming_editions %}
                     <td>
-                        <strong style="text-decoration: line-through;">May 27th, 2019 (23:59 PST)</strong>
-                        <strong style="color: red;">June 3rd, 2019 (23:59 PST)</strong>
+                        {% if ed.submission_deadline_extended %}
+                        <strong style="color: red;">{{ ed.submission_deadline_extended|date: "%b %d, %y" }} (23:59 PST)</strong>
+                        <span style="text-decoration: line-through;">{{ ed.submission_deadline|date: "%b %d, %y" }} (23:59 PST)</span>
+                        {% else %}
+                        <strong>{{ ed.submission_deadline|date: "%B %d, %Y" }} (23:59 PST)</strong>
+                        {% endif %}
                     </td>
+                    {% endfor %}
                 </tr>
                 <tr>
                     <td>Acceptance and Rebuttals</td>
-                    <td>June 10th, 2019</td>
+                    {% for ed in upcoming_editions %}
+                    <td>{{ ed.submission_acceptance|date: "%B %d, %Y" }}</td>
+                    {% endfor %}
                 </tr>
                 <tr>
                     <td>Camera Ready</td>
-                    <td>June 17th, 2019</td>
+                    {% for ed in upcoming_editions %}
+                    <td>{{ ed.submission_camera_ready|date: "%B %d, %Y" }}</td>
+                    {% endfor %}
                 </tr>
                 <tr>
                     <td>Workshop</td>
-                    <td>June 23rd, 2019</td>
+                    {% for ed in upcoming_editions %}
+                    <td>{{ ed.event_date|date: "%B %d, %Y" }}</td>
+                    {% endfor %}
                 </tr>
             </tbody>
         </table>
     </div>
 </div>
+
+
 <div class="row">
     <div class="col s12">
         <h4 class="header">Submission Guidelines</h5>
@@ -54,24 +79,28 @@ show_note: True
                     cognitive computing, reflect on trends in the community, or present anything interesting and worth
                     exploring as a direction.</li>
                 <li>Papers <em>MUST</em> be submitted in printable PDF format.</li>
-                <li>Papers <em>MUST</em> use the <a href="http://www.google.com/url?q=http%3A%2F%2Fwww.sigplan.org%2FResources%2FAuthor%2F&sa=D&sntz=1&usg=AFQjCNEfT-oLcvlS7z1DCpLyJoVISFs6XA">formatting guidelines for SIGPLAN conferences</a>.</li>
+                <li>Papers <em>MUST</em> use the <a href="http://www.sigplan.org/Resources/Author/">formatting guidelines for SIGPLAN conferences</a>.</li>
                 <li>Papers <em>MUST NOT</em> exceed 5 pages including references.</li>
                 <li>Text must be in no smaller than 10pt font size.</li>
                 <li>Review is single-blind, so please include authors’ names and affiliations on the submitted PDF.</li>
                 <li>All accepted papers will be posted to workshop website for download.</li>
                 <li>Accepted papers will be presented in short talk sessions at the workshop.</li>
                 <li>Authors are encouraged to provide artifacts to be included with their final papers.</li>
-                <li>If you have any issues, please email the publication and submission chairs Satyam Srivastava (<a href="mailto:satyam.srivastava@intel.com">satyam.srivastava@intel.com</a>) and Tao Sheng (<a href="mailto:tsheng@amazon.com">tsheng@amazon.com</a></li>
+                <li>If you have any issues, please email the publication and submission chairs
+                    Satyam Srivastava (<a href="mailto:satyam.srivastava@intel.com">satyam.srivastava@intel.com</a>) and
+                    Tao Sheng (<a href="mailto:tsheng@amazon.com">tsheng@amazon.com</a>)</li>
             </ul>
         <br /><br />
         <p><strong>​All papers will be submitted, reviewed, and notified through the EasyChair conference management
                 service. Please
                 visit the link below to proceed with the submission.</strong></p>
         <div class="center-align">
+            {% for ed in upcoming_editions %}
             <a class="waves-effect waves-light btn-large center-align"
-                href="https://easychair.org/conferences/?conf=emc21" target="_blank">
-                Submit to EMC<sup>2</sup> (ISCA 2019) <i class="material-icons right">send</i>
+                href="{{ ed.submission_url }}" target="_blank">
+                Submit to EMC<sup>2</sup> ({{ ed.colocated_short}}) <i class="material-icons right">send</i>
             </a>
+            {% endfor %}
         </div>
     </div>
 </div>
