Added program summary to index page.

--- a/_editions/1-asplos-18.html
+++ b/_editions/1-asplos-18.html
@@ -9,5 +9,6 @@ event_location: Williamsburg, VA
 event_room: Allegheny Room A
 event_session: afternoon
 is_upcoming: False
+show_program_summary: False
 is_accepting_submission: False
 ---
