--- a/_editions/2-hpca-19.html
+++ b/_editions/2-hpca-19.html
@@ -9,5 +9,6 @@ event_location: Washington D.C.
 event_room: Dogwood Room
 event_session: full
 is_upcoming: False
+show_program_summary: False
 is_accepting_submission: False
 ---
