--- a/_editions/3-cvpr-19.html
+++ b/_editions/3-cvpr-19.html
@@ -9,6 +9,7 @@ event_location: Long Beach, CA
 event_room: Hyatt Shoreline A
 event_session: morning
 is_upcoming: True
+show_program_summary: True
 is_accepting_submission: False
 ---
 <blockquote class="z-depth-1">
