Added new option to edition pages: show_on_submission_page.

--- a/_editions/1-asplos-18.html
+++ b/_editions/1-asplos-18.html
@@ -11,4 +11,5 @@ event_session: afternoon
 is_upcoming: False
 show_program_summary: False
 is_accepting_submission: False
+show_on_submission_page: False
 ---
