--- a/_editions/3-cvpr-19.html
+++ b/_editions/3-cvpr-19.html
@@ -11,4 +11,5 @@ event_session: morning
 is_upcoming: True
 show_program_summary: True
 is_accepting_submission: False
+show_on_submission_page: False
 ---
