--- a/_editions/2-hpca-19.html
+++ b/_editions/2-hpca-19.html
@@ -11,4 +11,5 @@ event_session: full
 is_upcoming: False
 show_program_summary: False
 is_accepting_submission: False
+show_on_submission_page: False
 ---
