--- a/_editions/4-isca-19.html
+++ b/_editions/4-isca-19.html
@@ -9,16 +9,11 @@ event_location: Phoenix, AZ
 event_room: 102B
 event_session: full
 is_upcoming: True
-is_accepting_submission: True
+is_accepting_submission: False
+show_on_submission_page: True
 submission_url: https://easychair.org/conferences/?conf=emc21
 submission_deadline: 2019-05-27
 submission_deadline_extended: 2019-06-03
 submission_acceptance: 2019-06-10
 submission_camera_ready: 2019-06-17
 ---
-<blockquote class="z-depth-1">
-    <p style="padding: 1rem; text-align: left;">
-        <strong>Update:</strong>
-        The submission deadline for EMC2 at ISCA'19 has been extended to <strong>June 3rd, 2019 at 23:59 PST</strong>.
-    </p>
-</blockquote>
