CVPR is no longer upcoming!

--- a/_editions/3-cvpr-19.html
+++ b/_editions/3-cvpr-19.html
@@ -8,8 +8,8 @@ event_date: 2019-06-16
 event_location: Long Beach, CA
 event_room: Hyatt Shoreline A
 event_session: morning
-is_upcoming: True
-show_program_summary: True
+is_upcoming: False
+show_program_summary: False
 is_accepting_submission: False
 show_on_submission_page: False
 ---
