--- a/_editions/4-isca-19.html
+++ b/_editions/4-isca-19.html
@@ -11,7 +11,8 @@ event_session: full
 is_upcoming: True
 is_accepting_submission: False
 show_on_submission_page: True
-submission_url: https://easychair.org/conferences/?conf=emc21
+show_program_summary: True
+ubmission_url: https://easychair.org/conferences/?conf=emc21
 submission_deadline: 2019-05-27
 submission_deadline_extended: 2019-06-03
 submission_acceptance: 2019-06-10
