Hide ISCA from submission page since we are about to host the workshop.

--- a/_editions/4-isca-19.html
+++ b/_editions/4-isca-19.html
@@ -10,7 +10,7 @@ event_room: 102B
 event_session: full
 is_upcoming: True
 is_accepting_submission: False
-show_on_submission_page: True
+show_on_submission_page: False
 show_program_summary: True
 ubmission_url: https://easychair.org/conferences/?conf=emc21
 submission_deadline: 2019-05-27
