Added more detail to ISCA room location.

--- a/_editions/4-isca-19.html
+++ b/_editions/4-isca-19.html
@@ -6,7 +6,7 @@ colocated_long: 46th International Symposium on Computer Architecture
 colocated_url: https://iscaconf.org/isca2019/
 event_date: 2019-06-23
 event_location: Phoenix, AZ
-event_room: 102B
+event_room: 102B (West Building)
 event_session: full
 is_upcoming: True
 is_accepting_submission: False
