ISCA 19 is now done.

--- a/_editions/4-isca-19.html
+++ b/_editions/4-isca-19.html
@@ -8,10 +8,10 @@ event_date: 2019-06-23
 event_location: Phoenix, AZ
 event_room: 102B (West Building)
 event_session: full
-is_upcoming: True
+is_upcoming: False
 is_accepting_submission: False
 show_on_submission_page: False
-show_program_summary: True
+show_program_summary: False
 ubmission_url: https://easychair.org/conferences/?conf=emc21
 submission_deadline: 2019-05-27
 submission_deadline_extended: 2019-06-03
