--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ permalink: /index
         sufficient, requiring system designers to carefully balance performance with power, energy, and area (overall PPA metric).
       </p>
       <p>The goal of this workshop is to provide a forum for researchers who are exploring novel ideas in the field of
-        energy efficient machine learning and artificial intelligence for embedded applications. We also hope to provide a
+        energy efficient machine learning and artificial intelligence for a variety of applications. We also hope to provide a
         solid platform for forging relationships and exchange of ideas between the industry and the academic world through
         discussions and active collaborations.</p>
   </div>
