Adding submission information to NeurIPS'19

--- a/_editions/5-neurips-19.html
+++ b/_editions/5-neurips-19.html
@@ -9,7 +9,11 @@ event_location: Vancouver BC, Canada
 event_room: TBD
 event_session: full
 is_upcoming: True
-is_accepting_submission: False
-show_on_submission_page: False
+is_accepting_submission: True
+show_on_submission_page: True
 show_program_summary: False
+submission_url: https://easychair.org/conferences/?conf=emc22
+submission_deadline: 2019-11-15
+submission_acceptance: 2019-11-29
+submission_camera_ready: 2019-12-06
 ---
