--- a/_editions/4-isca-19.html
+++ b/_editions/4-isca-19.html
@@ -12,7 +12,7 @@ is_upcoming: False
 is_accepting_submission: False
 show_on_submission_page: False
 show_program_summary: False
-ubmission_url: https://easychair.org/conferences/?conf=emc21
+submission_url: https://easychair.org/conferences/?conf=emc21
 submission_deadline: 2019-05-27
 submission_deadline_extended: 2019-06-03
 submission_acceptance: 2019-06-10
