Added clarifying instructions for conference submissions.

--- a/submission.html
+++ b/submission.html
@@ -86,7 +86,13 @@ show_note: False
                     cognitive computing, reflect on trends in the community, or present anything interesting and worth
                     exploring as a direction.</li>
                 <li>Papers <em>MUST</em> be submitted in printable PDF format.</li>
-                <li>Papers <em>MUST</em> use the <a href="http://www.sigplan.org/Resources/Author/">formatting guidelines for SIGPLAN conferences</a>.</li>
+                <li>Papers <em>MUST</em> use the formatting guidelines for the co-located conference of EMC2:</li>
+                    <ul class="browser-default">
+                        <li>ACM SIGPLAN <a href="http://www.sigplan.org/Resources/Author/">formatting guidelines</a></li>
+                        <li>IEEE conference <a href="https://www.ieee.org/conferences/publishing/templates.html">formatting guidelines</a></li>
+                        <li>NeurIPS conference <a href="https://nips.cc/Conferences/2019/CallForPapers">formatting guidelines</a></li>
+                    </ul>
+                </li>
                 <li>Papers <em>MUST NOT</em> exceed 5 pages including references.</li>
                 <li>Text must be in no smaller than 10pt font size.</li>
                 <li>Review is single-blind, so please include authors’ names and affiliations on the submitted PDF.</li>
