Bolded some text in submission page.

--- a/submission.html
+++ b/submission.html
@@ -88,9 +88,9 @@ show_note: False
                 <li>Papers <em>MUST</em> be submitted in printable PDF format.</li>
                 <li>Papers <em>MUST</em> use the formatting guidelines for the co-located conference of EMC2:</li>
                     <ul class="browser-default">
-                        <li>ACM SIGPLAN <a href="http://www.sigplan.org/Resources/Author/">formatting guidelines</a></li>
-                        <li>IEEE conference <a href="https://www.ieee.org/conferences/publishing/templates.html">formatting guidelines</a></li>
-                        <li>NeurIPS conference <a href="https://nips.cc/Conferences/2019/CallForPapers">formatting guidelines</a></li>
+                        <li><strong>ACM SIGPLAN</strong> <a href="http://www.sigplan.org/Resources/Author/">formatting guidelines</a></li>
+                        <li><strong>IEEE</strong> conference <a href="https://www.ieee.org/conferences/publishing/templates.html">formatting guidelines</a></li>
+                        <li><strong>NeurIPS</strong> conference <a href="https://nips.cc/Conferences/2019/CallForPapers">formatting guidelines</a></li>
                     </ul>
                 </li>
                 <li>Papers <em>MUST NOT</em> exceed 5 pages including references.</li>
