--- a/_editions/5-neurips-19.html
+++ b/_editions/5-neurips-19.html
@@ -16,4 +16,5 @@ submission_url: https://easychair.org/conferences/?conf=emc22
 submission_deadline: 2019-09-16
 submission_acceptance: 2019-09-30
 submission_camera_ready: 2019-10-11
+has_emcc_submission: True
 ---
