--- a/program-committee.html
+++ b/program-committee.html
@@ -41,7 +41,7 @@ permalink: /program-committee
         <h4 class="header">General Chairs</h4>
         <ul class="browser-default">
             <li>Raj Parihar, Tensilica/Cadence (parihar@cadence.com)</li>
-            <li>Michael Goldfarb, Nvidia (mgoldfarb@nvidia.com)</li>
+            <li>Michael Goldfarb, Qualcomm (mgoldfar@qti.qualcomm.com)</li>
         </ul>
     </div>
 </div>
