--- a/program-committee.html
+++ b/program-committee.html
@@ -9,7 +9,7 @@ permalink: /program-committee
         <h4 class="header">Program Committee</h4>
         <ul class="browser-default">
             <li>Raj Parihar, Tensilica/Cadence</li>
-            <li>Michael Goldfarb, Nvidia</li>
+            <li>Michael Goldfarb, Qualcomm</li>
             <li>Chen Ding, University of Rochester</li>
             <li>Mahdi Bojnordi, University of Utah</li>
             <li>Andy Glew, Nvidia</li>
