--- a/_editions/5-neurips-19.html
+++ b/_editions/5-neurips-19.html
@@ -17,4 +17,5 @@ submission_deadline: 2019-09-16
 submission_acceptance: 2019-09-30
 submission_camera_ready: 2019-10-11
 has_emcc_submission: True
+emcc_submission_deadline: 2019-11-15
 ---
