--- a/submission.html
+++ b/submission.html
@@ -42,8 +42,8 @@ show_note: False
                     {% for ed in upcoming_editions %}
                     <td>
                         {% if ed.submission_deadline_extended %}
-                        <strong style="color: red;">{{ ed.submission_deadline_extended|date: "%B %d, %y" }} (23:59 PST)</strong>
-                        <span style="text-decoration: line-through;">{{ ed.submission_deadline|date: "%B %d, %y" }} (23:59 PST)</span>
+                        <strong style="color: red;">{{ ed.submission_deadline_extended|date: "%B %d, %Y" }} (23:59 PST)</strong>
+                        <span style="text-decoration: line-through;">{{ ed.submission_deadline|date: "%B %d, %Y" }} (23:59 PST)</span>
                         {% else %}
                         <strong>{{ ed.submission_deadline|date: "%B %d, %Y" }} (23:59 PST)</strong>
                         {% endif %}
