Added sponsors to NeurIPS. Edition pages will support showing unique sponsors per edition.

--- a/_editions/5-neurips-19.html
+++ b/_editions/5-neurips-19.html
@@ -19,4 +19,11 @@ submission_acceptance: 2019-09-30
 submission_camera_ready: 2019-10-11
 has_emcc_submission: True
 emcc_submission_deadline: 2019-11-15
+sponsors:
+    - name: Qualcomm
+      logo: qualcomm.jpg
+      url: https://www.qualcomm.com
+    - name: Cadence
+      logo: cadence.jpg
+      url: https://www.cadence.com
 ---
