Added Sikandar as an organizer.

--- a/program-committee.html
+++ b/program-committee.html
@@ -24,6 +24,7 @@ permalink: /program-committee
             <li>Krishna Nagar, Intel</li>
             <li>Tao Sheng, Amazon</li>
             <li>Sushant Kondguli, Samsung</li>
+            <li>Sikandar Mashayak, Wave Computing</li>
         </ul>
     </div>
     <div class="col s12 m6">
