--- a/_editions/5-neurips-19.html
+++ b/_editions/5-neurips-19.html
@@ -19,6 +19,7 @@ submission_acceptance: 2019-09-30
 submission_camera_ready: 2019-10-11
 has_emcc_submission: True
 emcc_submission_deadline: 2019-11-15
+emcc_registration_deadline: 2019-11-08
 sponsors:
     - name: Qualcomm
       logo: qualcomm.jpg
