--- a/submission.html
+++ b/submission.html
@@ -63,6 +63,18 @@ show_note: False
                     {% endfor %}
                 </tr>
                 <tr>
+                    <td>EMCC Registration Deadline</td>
+                    {% for ed in upcoming_editions %}
+                        <td>
+                            {% if ed.has_emcc_submission %}
+                                <strong>{{ ed.emcc_registration_deadline|date: "%B %d, %Y" }}  (23:59 PST)</strong>
+                            {% else %}
+                                N/A
+                            {% endif %}
+                        </td>
+                    {% endfor %}
+                </tr>
+                <tr>
                     <td>EMCC Model Submission</td>
                     {% for ed in upcoming_editions %}
                         <td>
