Added EMCC registration form and link to it on the submission page.

--- a/submission-emcc.html
+++ b/submission-emcc.html
@@ -6,6 +6,15 @@ permalink: /submission-emcc
 
 <div class="row">
     <div class="col s12">
+        <h4 class="header">Registration</h4>
+        All submissions to EMCC must pre-register to upload a model for entrance and evaluation.
+        To register please fill out the <a href="/emcc-register">EMCC Submission Registration</a> form.
+    </div>
+</div>
+
+<div class="row">
+    <div class="col s12">
+        <h4 class="header">Submission Instructions</h4>
         Instructions and guidelines for uploading submissions to EMCC are coming soon.
     </div>
 </div>
