--- a/submission.html
+++ b/submission.html
@@ -143,7 +143,7 @@ show_note: False
             <a class="waves-effect waves-light btn-large center-align"
                 href="/submission-emcc" target="_blank">
                 Submit to EMC<sup>2</sup> ({{ ed.colocated_short}}) Model Compression Challenge
-                <i class="material-icons right">send</i>
+                <i class="material-icons right">cloud_upload</i>
             </a>
             {% endif %}
             {% endfor %}
