--- a/_editions/5-neurips-19.html
+++ b/_editions/5-neurips-19.html
@@ -16,6 +16,7 @@ submission_url: https://easychair.org/conferences/?conf=emc22
 submission_deadline: 2019-09-16
 submission_deadline_extended: 2019-09-20
 submission_acceptance: 2019-09-30
+submission_acceptance_extended: 2019-10-01
 submission_camera_ready: 2019-10-11
 has_emcc_submission: True
 emcc_submission_deadline: 2019-11-15
