--- a/program-committee.html
+++ b/program-committee.html
@@ -77,37 +77,42 @@ reviewers:
     - name: Danian Gong
       affiliation: Cadence
 ---
-<h3 class="header">Committees</h3>
+<h3 class="header">Program Committee</h3>
 <div class="row">
-    <div class="col s12 m6">
-        <h4 class="header">Program Committee</h4>
-        <ul class="browser-default">
-            {% for o in site.organizers %}
-                <li>{{ o.name }}, {{ o.affiliation }}</li>
-            {% endfor %}
-        </ul>
-    </div>
     <div class="col s12 m6">
         <h4 class="header">General Chairs</h4>
         <ul class="browser-default">
             <li>Raj Parihar, Tensilica/Cadence (parihar@cadence.com)</li>
             <li>Michael Goldfarb, Qualcomm (mgoldfar@qti.qualcomm.com)</li>
         </ul>
-        <h4 class="header">Publicity and Outreach Chairs</h4>
+        <h4 class="header">Publicity and Outreach</h4>
         <ul class="browser-default">
             <li>Debu Pal, Cadence</li>
             <li>Mahdi Bojnordi, University of Utah</li>
             <li>Krishna Nagar, Intel</li>
         </ul>
-        <h4 class="header">Submission Chairs</h4>
+    </div>
+    <div class="col s12 m6">
+        <h4 class="header">Submission</h4>
         <ul class="browser-default">
             <li>Tao Sheng, Amazon (tsheng@amazon.com)</li>
             <li>Sikandar Mashayak, Wave Computing (smashayak@wavecomp.com)</li>
         </ul>
-        <h4 class="header">Publication Chairs</h4>
+        <h4 class="header">Publication</h4>
         <ul class="browser-default">
             <li>Satyam Srivastava, Intel (satyam.srivastava@intel.com)</li>
             <li>Sushant Kondguli, Samsung (s.kondguli@samsung.com)</li>
+        </ul>
+    </div>
+</div>
+
+<h3 class="header">Review Committee</h3>
+<div class="row">
+    <div class="col s12">
+        <ul class="browser-default" >
+        {% for r in page.reviewers %}
+            <li style="display: inline-block">{{ r.name }}, {{ r.affiliation }}</li>
+        {% endfor %}
         </ul>
     </div>
 </div>
@@ -127,14 +132,3 @@ reviewers:
     </div>
 </div>
 {% endfor %}
-
-<h3 class="header">Review Committee</h3>
-<div class="row">
-    <div class="col s12">
-        <ul class="browser-default" >
-        {% for r in page.reviewers %}
-            <li style="display: inline-block">{{ r.name }}, {{ r.affiliation }}</li>
-        {% endfor %}
-        </ul>
-    </div>
-</div>
