Tweaking display of reviewers.

--- a/program-committee.html
+++ b/program-committee.html
@@ -111,7 +111,7 @@ reviewers:
     <div class="col s12">
         <ul class="browser-default" >
         {% for r in page.reviewers %}
-            <li style="display: inline-block">{{ r.name }}, {{ r.affiliation }}</li>
+            <li style="float: left;">{{ r.name }}, {{ r.affiliation }}</li>
         {% endfor %}
         </ul>
     </div>
