Added note regarding tickets.

--- a/submission.html
+++ b/submission.html
@@ -13,7 +13,12 @@ show_note: True
     <div class="col s12">
         <blockquote class="z-depth-1">
             <p style="padding: 1rem;">
-                Due to the overwhelming number of papers received, we have extended the notification date for the <a href="neurips-19">NeuIPS'19</a>.
+                <strong>Important Update:</strong> If your paper/poster was accepted to the <a href="neurips-19">NeurIPS'19</a> edition of EMC2 and you have not been selected in the
+                <a href="https://nips.cc/Lottery/">ticket lottery</a> you are qualified to recieve 1 (one) ticket from the EMC2 organizing committee to attend and present your work.
+            </p>
+            <p style="padding: 1rem;">
+                Please notify the submission chairs Satyam Srivastava (satyam.srivastava@intel.com) and Tao Sheng (tsheng@amazon.com) if someone other than the first author will be
+                presenting as soon as possible.
             </p>
         </blockquote>
     </div>
