Added picture and updated bio for Jinwon. Fixed reviewer affiliation.

--- a/program-committee.html
+++ b/program-committee.html
@@ -13,7 +13,7 @@ reviewers:
     - name: Ali	Shafiee
       affiliation: University of Utah
     - name: Partha	Maji
-      affiliation: University of Cambridge
+      affiliation: Arm ML Research
     - name: Karl Taht
       affiliation: University of Utah
     - name: Urmish Thakker
