Updated Raj's bio.

--- a/program-committee.html
+++ b/program-committee.html
@@ -82,7 +82,7 @@ reviewers:
     <div class="col s12 m6">
         <h4 class="header">General Chairs</h4>
         <ul class="browser-default">
-            <li>Raj Parihar, Tensilica/Cadence (parihar@cadence.com)</li>
+            <li>Raj Parihar, Microsoft (rapariha@microsoft.com)</li>
             <li>Michael Goldfarb, Qualcomm (mgoldfar@qti.qualcomm.com)</li>
         </ul>
         <h4 class="header">Publicity and Outreach</h4>
