Made previous editions table an include and now show the 5 most recent editions on the front page.

--- a/index.html
+++ b/index.html
@@ -52,3 +52,9 @@ permalink: /index
 
 {% include cfp.html %}
 </div>
+
+<div class="row">
+  <h3 class="header">Recent Editions</h3>
+  {% include previous-editions-table.html limit:5 %}
+  View the complete list of <a href="/previous-edditions">previous editions</a>.
+</div>
