--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@ permalink: /index
 
 <div class="row">
   <h3 class="header">Recent Editions</h3>
-  {% include previous-editions-table.html limit:5 %}
+  {% include previous-editions-table.html limit=5 %}
   View the complete list of <a href="/previous-edditions">previous editions</a>.
 </div>
