Fixed link typo and only show non-upcomming editions is past table.

--- a/index.html
+++ b/index.html
@@ -56,5 +56,5 @@ permalink: /index
 <div class="row">
   <h3 class="header">Recent Editions</h3>
   {% include previous-editions-table.html limit=5 %}
-  View the complete list of <a href="/previous-edditions">previous editions</a>.
+  View the complete list of <a href="/previous-editions">previous editions</a>.
 </div>
