Added presentation guidelines.

--- a/_editions/5-neurips-19.html
+++ b/_editions/5-neurips-19.html
@@ -9,7 +9,7 @@ event_location: Vancouver BC, Canada
 event_room: TBD
 event_session: full
 is_upcoming: True
-is_accepting_submission: True
+is_accepting_submission: False
 show_on_submission_page: True
 show_program_summary: False
 submission_url: https://easychair.org/conferences/?conf=emc22
